--- a/style.css
+++ b/style.css
@@ -2,21 +2,27 @@
     padding: 0px;
     margin: 0px;
 }
+  
 
-#inicio {
+#title01 {
     background-color: burlywood;
-    padding: 2vw 0 2vw 0;
-}
-
-#inicio > h1 {
-    font-size: 50px;
+    /*font-family: Arial, Helvetica, sans-serif;*/
+    font-family: "Rubik Mono One", monospace;
+    font-weight: 400;
+    font-style: normal;
+    padding: 8vw 0 8vw 0;
+    font-size: 60px;
     text-align: center;
+    margin: 10vh 10vw 0 10vw;
+    border-radius: 20px;
+    word-spacing: 10px;
+    letter-spacing: 10px;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.233);
 }
 
 #menu > a {
     font-size: 21px;
     text-decoration: none;
     color: black;
-    
     padding-left: 5px;
 }
