--- a/style.css
+++ b/style.css
@@ -5,15 +5,16 @@
   
 
 #title01 {
-    background-color: burlywood;
     /*font-family: Arial, Helvetica, sans-serif;*/
     font-family: "Rubik Mono One", monospace;
     font-weight: 400;
     font-style: normal;
+
+    background-color: burlywood;
+    text-align: center;
     padding: 8vw 0 8vw 0;
     font-size: 60px;
-    text-align: center;
-    margin: 10vh 10vw 0 10vw;
+    margin: 10vh 10vw 3vh 10vw;
     border-radius: 20px;
     word-spacing: 10px;
     letter-spacing: 10px;
@@ -21,8 +22,26 @@
 }
 
 #menu > a {
-    font-size: 21px;
-    text-decoration: none;
     color: black;
-    padding-left: 5px;
+    text-decoration: none;
+    font-size: 24px;
+    margin-left: 50px;
+    padding: 2px 5px;
+    letter-spacing: 1px;
+    transition: 0.5s;
+    border-radius: 2px;
+}
+
+#menu > a:hover {
+    color: white;
+    background-color: black;
+    font-size: 28px;
+    border-radius: 3px;
+    padding: 2px 11px;
+}
+
+#menu {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
