--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
     text-align: center;
     padding: 8vw 0 8vw 0;
     font-size: 60px;
-    margin: 10vh 10vw 3vh 10vw;
+    margin: 10vh 10vw 4vh 10vw;
     border-radius: 20px;
     word-spacing: 10px;
     letter-spacing: 10px;
@@ -44,4 +44,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 12vh;
 }
+
+#subTitle01 {
+    text-align: center;
+    font-size: 40px;
+    letter-spacing: 2px;
+}
+
