tentando animar imagens productsHome

--- a/style.css
+++ b/style.css
@@ -85,5 +85,12 @@ img:hover {
     height: 230px;
 }
 
+#agulhas {
+    background-image: url('imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp');
+}
+
+#agulhas:hover {
+    background-image: url('imagensprodutos/br-11134207-7r98o-lzp7dbssomjp83@resize_w450_nl.webp');
+}
 
 
