--- a/styleLogin.css
+++ b/styleLogin.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
-#loginHome {
+#loginHome > form {
     background-color: blanchedalmond;
     text-align: center;
-    width: 10vw 10vh;
+    width: 10vw;
 }
